6 may 2020 v304: Fixed: Blue selection buttons did not work properly on mobile devices.

--- a/main.css
+++ b/main.css
@@ -607,7 +607,7 @@ a {
 
 .buttonSelectedBlue {
   opacity:          1;
-  background-color: #4D90FE;
+  background-color: #4D90FE !important;
 }
 
 .buttonAdd {
